# remnis-app

./: .gitignore  README.md  requirements.md
apps/desktop/: README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/desktop/src/: App.tsx  Launcher.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/ui/: button.tsx
docs/: ACCEPTANCE_CRITERIA.md  CONTEXT.md  CONTRACTS.md  FAILURE_BEHAVIOR.md  HOW_IT_WORKS_NOW.md  NEXT_ACTIONS.md  PROJECT_STATUS.md  RAW_RETRIEVAL_MODEL.md  RULES.md
integrations/: README.md
integrations/browser-extension/: README.md
integrations/browser-extension/chromium/: background.js  manifest.json  popup.css  popup.html  popup.js
sidecar/: README.md  pyproject.toml  run_dev.sh
sidecar/$tmpdir/lancedb/remnis_events.lance/_transactions/: 0-5c91a525-9a27-4734-81ff-7b254247897a.txn
sidecar/app/: __init__.py  embedder.py  hash_utils.py  main.py  observer.py  retrieval_documents.py  schemas.py  search_utils.py  vector_store.py
sidecar/remnis_sidecar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
