[package]
name = "remnis-desktop"
version = "0.1.0"
description = "Remnis Desktop"
authors = ["Remnis"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
